added table and new form

--- a/BrainPortal/app/views/sites/_sites_table.html.erb
+++ b/BrainPortal/app/views/sites/_sites_table.html.erb
@@ -77,3 +77,10 @@
     end
   %>
 <% end %>
+
+
+
+<div id='table' style="padding-top:40px">
+</div>
+
+<%= javascript_pack_tag 'views/Sites/components/Table' %>
